refactor: 사용자 역할 조회 정책 단일화 (CQ-17)